force-app/main/default/objects/Shippo_Config__mdt/Shippo_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuracion de la integracion con la API de Shippo. Centraliza los datos de origen del envio evitando hardcodear valores en el codigo Apex.</description>
    <label>Shippo Config</label>
    <pluralLabel>Shippo Configs</pluralLabel>
</CustomObject>