force-app/main/default/objects/Shippo_Config__mdt/fields/Distance_Unit__c.field-meta.xml
<CustomField>
    <fullName>Distance_Unit__c</fullName>
    <label>Distance Unit</label>
    <type>Text</type>
    <length>10</length>
    <description>Unidad de distancia utilizada en el payload de Shippo (ej. cm).</description>
</CustomField>