force-app/main/default/objects/Shippo_Config__mdt/fields/Mass_Unit__c.field-meta.xml
<CustomField>
    <fullName>Mass_Unit__c</fullName>
    <label>Mass Unit</label>
    <type>Text</type>
    <length>10</length>
    <description>Unidad de masa utilizada en el payload de Shippo (ej. kg).</description>
</CustomField>