force-app/main/default/objects/Shippo_Config__mdt/fields/Origin_City__c.field-meta.xml
<CustomField>
    <fullName>Origin_City__c</fullName>
    <label>Origin City</label>
    <type>Text</type>
    <length>100</length>
    <description>Ciudad del almacen origen del envio.</description>
</CustomField>