force-app/main/default/objects/Shippo_Config__mdt/fields/Origin_Country__c.field-meta.xml
<CustomField>
    <fullName>Origin_Country__c</fullName>
    <label>Origin Country</label>
    <type>Text</type>
    <length>10</length>
    <description>Codigo ISO del pais del almacen origen (ej. US, ES).</description>
</CustomField>