force-app/main/default/objects/Shippo_Config__mdt/fields/Origin_Email__c.field-meta.xml
<CustomField>
    <fullName>Origin_Email__c</fullName>
    <label>Origin Email</label>
    <type>Email</type>
    <description>Email de contacto del remitente requerido por algunos carriers.</description>
</CustomField>