force-app/main/default/objects/Shippo_Config__mdt/fields/Origin_Name__c.field-meta.xml
<CustomField>
    <fullName>Origin_Name__c</fullName>
    <label>Origin Name</label>
    <type>Text</type>
    <length>100</length>
    <description>Nombre del remitente que aparecera en la etiqueta de envio.</description>
</CustomField>