force-app/main/default/objects/Shippo_Config__mdt/fields/Origin_Phone__c.field-meta.xml
<CustomField>
    <fullName>Origin_Phone__c</fullName>
    <label>Origin Phone</label>
    <type>Phone</type>
    <description>Telefono de contacto del remitente requerido por algunos carriers.</description>
</CustomField>