force-app/main/default/objects/Shippo_Config__mdt/fields/Origin_State__c.field-meta.xml
<CustomField>
    <fullName>Origin_State__c</fullName>
    <label>Origin State</label>
    <type>Text</type>
    <length>10</length>
    <description>Codigo de estado del almacen origen (ej. CA).</description>
</CustomField>