force-app/main/default/objects/Shippo_Config__mdt/fields/Origin_Street__c.field-meta.xml
<CustomField>
    <fullName>Origin_Street__c</fullName>
    <label>Origin Street</label>
    <type>Text</type>
    <length>100</length>
    <description>Calle y numero del almacen origen del envio.</description>
</CustomField>