force-app/main/default/objects/Shippo_Config__mdt/fields/Origin_Zip__c.field-meta.xml
<CustomField>
    <fullName>Origin_Zip__c</fullName>
    <label>Origin Zip</label>
    <type>Text</type>
    <length>20</length>
    <description>Codigo postal del almacen origen del envio.</description>
</CustomField>